force-app/main/default/objects/DealerHours__c/DealerHours__c.object-meta.xml
<CustomObject>
    <description>This table defines the Dealer Hours</description>
    <label>Dealer Hours</label>
    <nameField>
        <displayFormat>DHOUR{0000}</displayFormat>
        <label>Dealer Hours Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>