force-app/main/default/objects/DealerHours__c/fields/Activator_DealerHourId__c.field-meta.xml
<CustomField>
    <fullName>Activator_DealerHourId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Activator Primary Key, may not be unique on endpoint.</inlineHelpText>
    <label>Activator Dealer Hours Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>