force-app/main/default/objects/DealerHours__c/fields/DayNumber__c.field-meta.xml
<CustomField>
    <fullName>DayNumber__c</fullName>
    <inlineHelpText>Day of week, 0=Sunday</inlineHelpText>
    <label>Day Number</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Sunday</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Saturday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>