force-app/main/default/objects/DealerHours__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Dealer for which the hours are defined</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Main Dealer Hours</relationshipLabel>
    <relationshipName>Dealer_Hours</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>