force-app/main/default/objects/DealerHours__c/fields/OpenFrom__c.field-meta.xml
<CustomField>
    <fullName>OpenFrom__c</fullName>
    <inlineHelpText>Opening time, in dealer timezone</inlineHelpText>
    <label>Open From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>